--- a/group13c67.Rmd
+++ b/group13c67.Rmd
@@ -36,12 +36,11 @@ The housing market of the city of Boston is a volatile market, as with any world
 
 
 #Background and Significance
-Boston is the captial and largest city in Massachusetts. Founded in 1630 Boston is one of the oldest cities in America and the city played an important role in American History. As Boston is a world reknowned city, the housing market in Boston is expensive, with finding and owning property is an important financial goal for many that live within or near Boston. As Housing is an expensive financial venture it is optimal to buy houses at a low price point to maximize 
+Boston is the captial and largest city in Massachusetts. Founded in 1630 Boston is one of the oldest cities in America and the city played an important role in American History. As Boston is a world reknowned city, the housing market in Boston is expensive, with finding and owning property is an important financial goal for many that live within or near Boston.
 
-The model introduced in this report is used to predict the housing value in the Boston with the given predictor values 
+As Boston currently faces a "growing housing challenge ... likely because younger residents are marrying later ... many of them are overloaded with college debt" (Bluestone). It is clear that buying a House is an expensive financial burden that less and less people are able to afford. Especially when a house must be able to fit the needs of the buyer as a living space. 
 
-The goal of this study is to obtain an appropriate model 
-
+We propose this model with the given predictor variables to accurately predict housing values within Boston. By being able to purchase a house at an optimal time, it minimizes the financial burden of the purchase and also allows you to maximize any capital gains that may result from the changing value of the purchased house. Through this process, it is possible to maximize the value of your purchase and minimize the cost of buying a house which leads to more people being able to afford housing in the city of Boston. 
 
 #Explanatory Data Analysis
 This Data set contains 506 observations on 13 predictors variables, which are per capita crime rate by town, proportion of residential land zoned for lots over 25,000 sq. ft., proportion of non-retail business acres per town
@@ -131,5 +130,7 @@ step$anova
 
 ```
 
+#Citations 
+Bluestone, B. & Huessy, J. (2017). The Greater Boston Housing Report Card 2017 Ideas from the Urban Core - Responsive Development - as a Model for Regional Growth, 68
 
 
