--- a/group13c67.Rmd
+++ b/group13c67.Rmd
@@ -156,8 +156,34 @@ AIC <- n*log(SSRes) - n*log(n) + 2*p_prime
 AIC
 
 
+# Studentized deleted residuals
+"So from our outlier Test with t-crit value of 3.925756, we see that only outlying data point is 162."
+outlierTest(fit_select)
+
+t <- rstudent(fit_select)
+alpha <- 0.05
+# Transpose the MEDV from a column vector into a row vector in order for length to work
+myVar <- housing["MEDV"]
+n <- length(t(myVar))
+p_prime = length(coef(fit_select)) 
+t_crit <- qt(1-alpha/(2*n),n-p_prime-1)
+round(t,2)
+"Below is the T crit value: "
+t_crit
+which(abs(t) > t_crit)
+
+#model validation
+"Model Validation"
+validate_housing <-housing[,c("CRIME", "CHR_V", "ROOM", "AGE", "DIS", "PT_RATIO", "B")]
 
 
+Y_pred <- predict(fit_select, validate_housing)
+Y_obs <- housing["MEDV"]
+n_star <- nrow(housing)
+MSPE <- sum((Y_obs-Y_pred)^2/n_star)
+MS_res <-(summary(fit_select)$sigma^2)
+MS_res
+MSPE
 
 #ploting out the table 
 #plot(fit1$residuals~fit1$fitted.values, ylab = "Residuals", xlab = "Fitted Values", main = "Graph Title")
